--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
